[package]
name = "l337-futures3"
version = "0.1.0"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]
license = "MIT OR Apache-2.0"
description = "yet another connection pooler (futures3 version)"

[dependencies]
futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
tokio = "0.1.8"
crossbeam = "0.4"
log = "0.4"

[workspace]
members = [
  "l337-postgres",
]
